--- a/Clash/config/ACL4SSR_Online_Full.ini
+++ b/Clash/config/ACL4SSR_Online_Full.ini
@@ -10,6 +10,7 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/zhanghao0325/ACL4SSR/master/Clash/steam_epic.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/zhanghao0325/ACL4SSR/master/Clash/XW.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
